Introduce `ReferenceFieldValueStrategy` for handling ORM-specific reference field values. Replace JPA SQL seed data with modular implementations for JPA and jOOQ.